<resources>
    <string name="app_name">Your News</string>
    <string name="api_key">test</string>
    <string name="no_internet">No internet connection.</string>
    <string name="empty_view">No news to display.\nPlease come back later.</string>
    <string name="no_author">No author available</string>
    <string name="no_info">No info available</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Your News Settings</string>
    <string name="settings_order_by_label">Order criteria</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <string name="settings_query_by_label">Search by keyword</string>
    <string name="settings_query_by_key" translatable="false">query_by</string>
    <string name="settings_query_by_default_key" translatable="false">@string/settings_query_by_default</string>
    <string name="settings_query_by_default">technology</string>
    <string name="settings_pageSize_label">Number of articles</string>
    <string name="settings_pageSize_key" translatable="false">page_size</string>
    <string name="settings_pageSize_default_key" translatable="false">@string/settings_pageSize_default</string>
    <string name="settings_pageSize_default">20</string>
</resources>
